try to fix path

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <a href="/01-creating-elements.html">Creating elements</a>
       </li>
       <li>
-        <a href="/02-creating-collections.html">Creating collections</a>
+        <a href="./02-creating-collections.html">Creating collections</a>
       </li>
       <li>
-        <a href="/03-creating-product-collections.html"
+        <a href="03-creating-product-collections.html"
           >Creating product collections</a
         >
       </li>
