fix path to linked pages

--- a/01-creating-elements.html
+++ b/01-creating-elements.html
@@ -7,9 +7,9 @@
     <title>Creating elements</title>
   </head>
   <body>
-    <p><a href="/index.html">Main page</a></p>
+    <p><a href="./index.html">Main page</a></p>
     <h1 class="title">Creating elements</h1>
     <div class="container"></div>
-    <script src="/js/01-creating-elements.js"></script>
+    <script src="./js/01-creating-elements.js"></script>
   </body>
 </html>
