--- a/03-creating-product-collections.html
+++ b/03-creating-product-collections.html
@@ -7,9 +7,9 @@
     <title>Creating product collections</title>
   </head>
   <body>
-    <p><a href="/index.html">Main page</a></p>
+    <p><a href="./index.html">Main page</a></p>
     <h1 class="title">Creating product collections</h1>
     <div class="products"></div>
-    <script src="/js/03-creating-product-collections.js" type="module"></script>
+    <script src="./js/03-creating-product-collections.js" type="module"></script>
   </body>
 </html>
