--- a/02-creating-collections.html
+++ b/02-creating-collections.html
@@ -7,9 +7,9 @@
     <title>Creating collections</title>
   </head>
   <body>
-    <p><a href="/index.html">Main page</a></p>
+    <p><a href="./index.html">Main page</a></p>
     <h1 class="title">Creating collections</h1>
     <div class="color-picker"></div>
-    <script src="/js/02-creating-collections.js"></script>
+    <script src="./js/02-creating-collections.js"></script>
   </body>
 </html>
