--- a/04-template-transactions.html
+++ b/04-template-transactions.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Transactions</title>
   </head>
   <body>
-    <p><a href="/index.html">Main page</a></p>
+    <p><a href="./index.html">Main page</a></p>
     <h1 class="title">Transactions</h1>
 
     <table class="transaction-table">
@@ -23,6 +23,6 @@
         </tr>
       </thead>
     </table>
-    <script src="/js/04-template-transactions.js" type="module"></script>
+    <script src="./js/04-template-transactions.js" type="module"></script>
   </body>
 </html>
