--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <base href="/DOM-tasks/" />
     <title>DOM</title>
   </head>
   <body>
     <ul>
       <li>
-        <a href="/01-creating-elements.html">Creating elements</a>
+        <a href="./01-creating-elements.html">Creating elements</a>
       </li>
       <li>
         <a href="./02-creating-collections.html">Creating collections</a>
       </li>
       <li>
-        <a href="03-creating-product-collections.html"
+        <a href="./03-creating-product-collections.html"
           >Creating product collections</a
         >
       </li>
       <li>
-        <a href="/04-template-transactions.html">Transactions</a>
+        <a href="./04-template-transactions.html">Transactions</a>
       </li>
     </ul>
   </body>
